--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,8 +10,20 @@
 	color: #FFF;
 	padding: 1px 2px;
 }
+.blue-03 {
+	background-color: var(--blue03);
+	border-radius: 2px;
+	color: #FFF;
+	padding: 1px 2px;
+}
 .green-01 {
 	background-color: var(--green01);
+	border-radius: 2px;
+	color: #FFF;
+	padding: 1px 2px;
+}
+.grey-03 {
+	background-color: var(--grey03);
 	border-radius: 2px;
 	color: #FFF;
 	padding: 1px 2px;
